<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mainLinear"
        android:layout_marginLeft="140dip"
        android:layout_marginRight="140dip">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="6dp"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="5dp">


        <LinearLayout
            android:padding="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="6"
            android:id="@+id/innerLinear">

            <LinearLayout
                android:layout_width="180dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/opensans_semibold"
                    android:text="@string/nameLabel"
                    android:textSize="32sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/opensans_semibold"
                    android:text="@string/companyLabel"
                    android:textSize="32sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/opensans_semibold"
                    android:text="@string/emailLabel"
                    android:textSize="32sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/opensans_semibold"
                    android:text="@string/phoneLabel"
                    android:textSize="32sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/guestName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textAlignment="viewStart"
                    android:textSize="32sp"
                    android:fontFamily="@font/opensans_regular"/>
                <TextView
                    android:id="@+id/guestCompany"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textAlignment="viewStart"
                    android:textSize="32sp"
                    android:fontFamily="@font/opensans_regular"/>
                <TextView
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:id="@+id/guestEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="viewStart"
                    android:textSize="32sp"
                    android:fontFamily="@font/opensans_regular"/>
                <TextView
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:id="@+id/guestPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="viewStart"
                    android:textSize="32sp"
                    android:fontFamily="@font/opensans_regular"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="180dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/opensans_semibold"
                    android:text="@string/visitorLabel"
                    android:textSize="32sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/opensans_semibold"
                    android:text="@string/purposeLabel"
                    android:textSize="32sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/opensans_semibold"
                    android:text="@string/signInLabel"
                    android:textSize="32sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/opensans_semibold"
                    android:text="@string/signOutLabel"
                    android:textSize="32sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">


                <TextView
                    android:id="@+id/guestType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textAlignment="viewStart"
                    android:textSize="32sp"
                    android:fontFamily="@font/opensans_regular"/>
                <TextView
                    android:id="@+id/guestPurpose"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textAlignment="viewStart"
                    android:textSize="32sp"
                    android:fontFamily="@font/opensans_regular"/>
                <TextView
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:id="@+id/guestSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="viewStart"
                    android:textSize="32sp"
                    android:fontFamily="@font/opensans_regular"/>
                <TextView
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:id="@+id/guestSignOut"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="viewStart"
                    android:textSize="32sp"
                    android:fontFamily="@font/opensans_regular"/>

            </LinearLayout>

            <ImageView
                android:id="@+id/guestPhoto"
                android:layout_width="125dip"
                android:layout_height="200dip"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:background="@drawable/image_outline" />


        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>

